style: adjust margin for widget-post and ensure text alignment in widget-post-body

--- a/react-app/src/components/PostList.css
+++ b/react-app/src/components/PostList.css
@@ -4,7 +4,7 @@
 
 .widget-post {
   background-color: #340055;
-  margin: 7px;
+  margin: 12px 7px;
   padding: 7px;
   border-radius: 10px;
 
@@ -19,6 +19,7 @@
 }
 
 .widget-post-body {
+  text-align: start;
   font-size: 14px;
   color: #ccc;
 }
